fix sizing and alignment of tooltip

--- a/packages/ui-extensions-dev-console/src/components/Tooltip/TooltipPopover.module.css
+++ b/packages/ui-extensions-dev-console/src/components/Tooltip/TooltipPopover.module.css
@@ -9,14 +9,12 @@
   font-weight: 400;
   padding: 1rem;
   border-radius: 4px;
+  width: max-content;
   max-width: var(--tooltip-popover-max-width);
-  white-space: initial;
-
+  white-space: pre-wrap;
+  word-break: break-word;
+  word-wrap: break-word;
   z-index: 9999;
   box-shadow: 0px 3px 6px -3px rgba(23, 24, 24, 0.08),
     0px 8px 20px -4px rgba(23, 24, 24, 0.12);
-}
-
-.LongText {
-  width: var(--tooltip-popover-max-width);
 }
